--- a/FoodTruckClient/FoodTruckClient/Info.plist
+++ b/FoodTruckClient/FoodTruckClient/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Wheres the FoodTruck</string>
+	<string>Where is Rest</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
